
  * 1.0.2

Fixes
  * Replaces decreated NumPy type aliases and fixes NEP 34 explicit ragged
    array warnings (PR #3139, backports PRs #2845 and #2834)
  * Fixed several issues with NSGrid and triclinic boxes not finding some pairs.
    (Issues #2229 #2345 #2919, PR #2937).

Changes
  * Maximum pinned versions in setup.py removed for python 3.6+ (PR #3139)

Deprecations
  * hbonds.WaterBridgeAnalysis will be removed in 2.0.0 and
    replaced with hydrogenbonds.WaterBridgeAnalysis (#3111)
    
01/17/21 richardjgowers, IAlibay, orbeckst, tylerjereddy, jbarnoud,
         yuxuanzhuang, lilyminium, VOD555, p-j-smith, bieniekmateusz,
         calcraven, ianmkenney, rcrehuet, manuel.nuno.melo, hanatok

  * 1.0.1

Fixes
  * Due to issues with the reliability/accuracy of `nsgrid`, this method is
    currently not recommended for use. It has also been removed as an option
    from lib.capped_distance and lib.self_capped_distance. Please use PKDTree
    instead (Issue #2930)
  * Development status changed from beta to mature (Issue #2773)
  * pip installation only requests Python 2.7-compatible packages (#2736)
  * Testsuite does not use any more matplotlib.use('agg') (#2191)
  * The methods provided by topology attributes now appear in the
    documentation (Issue #1845)
  * AtomGroup.center now works correctly for compounds + unwrapping
    (Issue #2984)
  * In ChainReader, read_frame does not trigger change of iterating position.
    (Issue #2723, PR #2815)
  * empty_atomgroup.select_atoms('name *') now returns an empty
    AtomGroup instead of TypeError (Issue #2765)
  * TRZReader now checks `n_atoms` on reading. (Issue #2817, PR #2820)
  * TRZWriter now writes `n_atoms` to the file. (Issue #2817, PR #2820)
  * rdf.InterRDF_s density keyword documented and now gives correct results for
    density=True; the keyword was available since 0.19.0 but with incorrect
    semantics and not documented and did not produce correct results (Issue
    #2811, PR #2812)